--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -24,7 +24,7 @@ jobs:
         python-version: "3.9"
     
     - name: Install dependencies
-      run: uv sync --dev
+      run: UV_GIT_LFS=1 uv sync --dev
     
     - name: Run ruff linter
       run: uv run ruff check --output-format=github .
