--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,19 @@ dev = [
 # UV_GIT_LFS=1 uv sync
 # ```
 [tool.uv.sources]
-livekit-agents = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-agents" }
-livekit-plugins-openai = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-openai" }
-livekit-plugins-turn-detector = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-turn-detector" }
-livekit-plugins-silero = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-silero" }
-livekit-plugins-cartesia = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-cartesia" }
-livekit-plugins-deepgram = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-deepgram" }
+# livekit-agents = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-agents" }
+# livekit-plugins-openai = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-openai" }
+# livekit-plugins-turn-detector = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-turn-detector" }
+# livekit-plugins-silero = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-silero" }
+# livekit-plugins-cartesia = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-cartesia" }
+# livekit-plugins-deepgram = { git = "https://github.com/livekit/agents.git", branch = "theo/agents1.2", subdirectory = "livekit-plugins/livekit-plugins-deepgram" }
+livekit-agents = { path = "../../livekit/agents/livekit-agents" }
+livekit-plugins-openai = { path = "../../livekit/agents/livekit-plugins/livekit-plugins-openai" }
+livekit-plugins-turn-detector = { path = "../../livekit/agents/livekit-plugins/livekit-plugins-turn-detector" }
+livekit-plugins-silero = { path = "../../livekit/agents/livekit-plugins/livekit-plugins-silero" }
+livekit-plugins-cartesia = { path = "../../livekit/agents/livekit-plugins/livekit-plugins-cartesia" }
+livekit-plugins-deepgram = { path = "../../livekit/agents/livekit-plugins/livekit-plugins-deepgram" }
+
 
 [tool.setuptools.packages.find]
 where = ["src"]
