--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,14 @@ services:
   #    LIVEKIT_KEYS: "devkey: secret"
   #    LIVEKIT_NODE_IP: "192.168.255.14" 
 
+  coqui-tts:
+    image: ghcr.io/coqui-ai/tts-cpu:latest
+    ports:
+      - "5002:5002"
+    environment:
+      - MODEL_NAME=tts_models/en/ljspeech/tacotron2-DDC
+    command: ["--model_name", "tts_models/en/ljspeech/tacotron2-DDC", "--port", "5002"]
+
   postgres:
     image: postgres:15-alpine
     environment:
@@ -62,6 +70,7 @@ services:
     depends_on:
       - ollama
       - litellm
+      - coqui-tts
     #depends_on:
     #  - livekit
 
