--- a/Dockerfile.tts
+++ b/Dockerfile.tts
@@ -1,24 +1,38 @@
-FROM python:3.9-slim
+FROM python:3.10-slim
 
-# Install system dependencies for espeak TTS
+# Install system dependencies for Coqui TTS
 RUN apt-get update && \
-    apt-get install -y espeak espeak-data libespeak-dev ffmpeg && \
+    apt-get install -y ffmpeg git build-essential espeak espeak-data libespeak-dev && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-RUN pip install flask requests pydub
+RUN pip install flask requests pydub TTS==0.13.3 torch torchaudio --no-cache-dir
 
 WORKDIR /app
 
 # Create the TTS server
 COPY <<EOF /app/tts_server.py
 from flask import Flask, request, jsonify
-import subprocess
 import tempfile
 import os
+from TTS.api import TTS
+import torch
 
 app = Flask(__name__)
+
+# Initialize Coqui TTS with a good English model
+# Using VITS model for good quality and reasonable speed
+model_name = "tts_models/en/ljspeech/vits"
+print(f"Loading TTS model: {model_name}")
+
+# Check if CUDA is available, otherwise use CPU
+device = "cuda" if torch.cuda.is_available() else "cpu"
+print(f"Using device: {device}")
+
+# Initialize TTS with GPU support if available
+tts = TTS(model_name=model_name, gpu=(device == "cuda"))
+print("TTS model loaded successfully!")
 
 @app.route("/synthesize", methods=["POST"])
 def synthesize():
@@ -26,12 +40,13 @@ def synthesize():
         data = request.get_json()
         text = data.get("text", "")
         
+        if not text:
+            return jsonify({"error": "No text provided"}), 400
+        
         # Create temp file for audio
         with tempfile.NamedTemporaryFile(suffix=".wav", delete=False) as temp_file:
-            # Use espeak to generate speech
-            subprocess.run([
-                "espeak", "-s", "150", "-w", temp_file.name, text
-            ], check=True)
+            # Generate speech using Coqui TTS
+            tts.tts_to_file(text=text, file_path=temp_file.name)
             
             # Read the audio file
             with open(temp_file.name, "rb") as f:
@@ -42,11 +57,12 @@ def synthesize():
             
             return audio_data, 200, {"Content-Type": "audio/wav"}
     except Exception as e:
+        print(f"TTS Error: {e}")
         return jsonify({"error": str(e)}), 500
 
 @app.route("/health", methods=["GET"])
 def health():
-    return jsonify({"status": "ok"})
+    return jsonify({"status": "ok", "model": model_name, "device": device})
 
 if __name__ == "__main__":
     app.run(host="0.0.0.0", port=5000, debug=True)
