Add configuration for Whisper STT and Ollama LLM; prewarm Whisper model on startup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ LIVEKIT_API_SECRET=
 OPENAI_API_KEY=
 DEEPGRAM_API_KEY=
 CARTESIA_API_KEY=
+
+# Whisper STT Configuration
+# Model options: tiny, base, small, medium, large-v1, large-v2, large-v3, turbo
+# large-v3 recommended for RTX 4070 (16GB VRAM) - excellent quality
+# medium recommended for 8GB+ VRAM - good quality, faster
+# small recommended for 4GB+ VRAM - decent quality, much faster
+WHISPER_MODEL=small
+
+# Ollama LLM Configuration  
+OLLAMA_BASE_URL=http://ollama:11434
+
+# Coqui TTS Configuration
+COQUI_TTS_BASE_URL=http://coqui-tts:5000
