Update environment configuration and Docker setup for Whisper STT; optimize model loading with GPU support

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,9 @@ CARTESIA_API_KEY=
 # large-v3 recommended for RTX 4070 (16GB VRAM) - excellent quality
 # medium recommended for 8GB+ VRAM - good quality, faster
 # small recommended for 4GB+ VRAM - decent quality, much faster
-WHISPER_MODEL=small
+WHISPER_DEVICE=cuda       # Uses GPU
+WHISPER_COMPUTE_TYPE=float16   # Optimized for GPU
+WHISPER_MODEL=turbo
 
 # Ollama LLM Configuration  
 OLLAMA_BASE_URL=http://ollama:11434
