--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,15 @@
-FROM python:3.11-slim
+FROM nvidia/cuda:12.3.2-cudnn9-runtime-ubuntu22.04
+
+# Install Python 3.10
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set Python 3 as default
+RUN ln -s /usr/bin/python3 /usr/bin/python
+
 WORKDIR /app
 COPY pyproject.toml .
 COPY src/ src/
