Add Chatter TTS plugin and update agent to use it; refactor Docker Compose for Chatter TTS integration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,25 +26,62 @@ services:
   #   #command: ["--model_name", "tts_models/en/ljspeech/tacotron2-DDC"]
   #   command: ["--model_name", "tts_models/en/ljspeech/glow-tts"]
 
-  # Coqui TTS server with neural models
-  coqui-tts:
-    container_name: coqui-tts
+  # Coqui TTS server with neural models - COMMENTED OUT FOR CHATTER TTS
+  # coqui-tts:
+  #   container_name: coqui-tts
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.tts
+  #   ports:
+  #     - "5000:5000"
+  #   environment:
+  #     - TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC  # Can be changed to other models
+  #   volumes:
+  #     - ./coqui-tts:/app/coqui-tts  # Mount code for development
+  #     - ./coqui-tts_models:/root/.local/share/tts  # Mount model cache
+  #   deploy:
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #             count: all
+  #             capabilities: [gpu]
+
+  # Chatter TTS server - Advanced TTS with voice cloning capabilities
+  chatter:
+    container_name: chatter-tts
     build:
-      context: .
-      dockerfile: Dockerfile.tts
+      context: ./chatter
+      dockerfile: Dockerfile
+      args:
+        - RUNTIME=nvidia
     ports:
-      - "5000:5000"
-    environment:
-      - TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC  # Can be changed to other models
+      - "5000:8004"  # Map container port 8004 to host port 5000
     volumes:
-      - ./coqui-tts:/app/coqui-tts  # Mount code for development
-      - ./coqui-tts_models:/root/.local/share/tts  # Mount model cache
+      # Mount local config file for persistence
+      - ./chatter/config.yaml:/app/config.yaml
+      # Mount local directories for persistent app data
+      - ./chatter/voices:/app/voices
+      - ./chatter/reference_audio:/app/reference_audio
+      - ./chatter/outputs:/app/outputs
+      - ./chatter/logs:/app/logs
+      - ./models/chatter:/app/model_cache  # Mount model cache for Chatter
+      # Named volume for Hugging Face model cache to persist across container rebuilds
+      - chatter_hf_cache:/app/hf_cache
+    restart: unless-stopped
+    environment:
+      # Enable faster Hugging Face downloads inside the container
+      - HF_HUB_ENABLE_HF_TRANSFER=1
+      # Make NVIDIA GPUs visible and specify capabilities for PyTorch
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    command: ["python", "server.py", "--log-level", "debug"]
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              count: 1
               capabilities: [gpu]
 
   postgres:
@@ -109,7 +146,8 @@ services:
     depends_on:
       - ollama
       - litellm
-      - coqui-tts
+      - chatter  # New Chatter TTS dependency
+      # - coqui-tts  # Commented out for Chatter TTS
     deploy:
       resources:
         limits:
@@ -126,3 +164,4 @@ services:
 volumes:
   ollama_data:
   postgres_data:
+  chatter_hf_cache:  # Hugging Face model cache for Chatter TTS
